--- a/app/views/tweets/_feed.html.erb
+++ b/app/views/tweets/_feed.html.erb
@@ -20,8 +20,8 @@
         </div>
         <div class='media-content'>
           <div class='content'>
-            <strong>Paul Lam</strong><br />
-            <small>@paulhklam</small><br/>
+            <strong><%= tweet.user.name %></strong><br />
+            <small><%= tweet.user.username %></small><br/>
             <p><%= tweet.body %></p>
           </div>
           <nav class='level'>
