--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,7 +33,7 @@
 
           <div class='field'>
             <div class='control'>
-            <%= f.input :password, autocomplete: 'off', hint: 'leave it blank if you don't want to change it', required: false, input_html: { class: 'input'}, wrapper: false, label_html: { class: 'label' } %>
+            <%= f.input :password, autocomplete: 'off', hint: "leave it blank if you don't want to change it", required: false, input_html: { class: 'input'}, wrapper: false, label_html: { class: 'label' } %>
             </div>
           </div>
 
