--- a/app/views/tweets/_follow-feed.html.erb
+++ b/app/views/tweets/_follow-feed.html.erb
@@ -6,7 +6,7 @@
 		<article class='media'>
 			<div class='media-left'>
 				<figure class='image is-32x32'>
-					<img src='https://bulma.io/images/placeholders/64x64.png'>
+					<img src="https://bulma.io/images/placeholders/64x64.png">
 				</figure>
 			</div>
 			<div class='media-content'>
@@ -23,7 +23,7 @@
 		<article class='media'>
 			<div class='media-left'>
 				<figure class='image is-32x32'>
-					<img src='https://bulma.io/images/placeholders/64x64.png'>
+					<img src="https://bulma.io/images/placeholders/64x64.png">
 				</figure>
 			</div>
 			<div class='media-content'>
@@ -40,7 +40,7 @@
 		<article class='media'>
 			<div class='media-left'>
 				<figure class='image is-32x32'>
-					<img src='https://bulma.io/images/placeholders/64x64.png'>
+					<img src="https://bulma.io/images/placeholders/64x64.png">
 				</figure>
 			</div>
 			<div class='media-content'>
